cluster/infrastructure/technitium-dns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
  namespace: technitium-dns
  label:
    app.kubernetes.io/name: technitium
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: technitium
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: technitium
    spec:
      containers:
        - name: technitium
          image: technitium/dns-server:15.2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 5380
            timeoutSeconds: 1

          ports:
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: web
              containerPort: 5380
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5380
            timeoutSeconds: 1

          volumeMounts:
            - name: technitium-data
              mountPath: /etc/dns

      volumes:
        - name: technitium-data
          persistentVolumeClaim:
            claimName: technitium-data
