cluster/infrastructure/technitium-dns/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: technitium-dns
spec:
  hostnames:
    - technitium.home.lan
  parentRefs:
    - name: home-gateway
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: technitium-web
          port: 5380
